main/static/css/custom.css
/* General customization*/
:root {
  --main-blue:#99D3DF;
  --secondary-blue: #88BBD6;
  --main-grey: #CDCDCD;
  --secondary-grey : #7e7e7e

}
 body {
   font-family: Lato;
 }

h1, h2, h3, h4 {
  color: var(--secondary-grey);
}

.parallax-window {
    background: transparent;
}

section {
  padding : 4rem 0;
}

.tooltip-inner {
  background-color: #f8f9fa;
  color: #88BBD6;
  opacity: 1.0;
}

.tooltip {
  opacity : 1 !important;
}


/* s-header */

.s-header {
  padding-top: 10%;
  padding-bottom: 10%;
}

/* b-separator */

.b-separator {
  border: None;
  height: 3px;
  color: var(--main-blue); /* old IE */
  background-color: var(--main-blue); /* Modern Browsers */
  width:25%;
}

/* b-h1 */

.b-h1__title {
  font-size: 3.5em;
  color: #fff
}

.b-h1__slogan {
  opacity: 0.7;
  color: white;
}

/* b-h2 */

.b-h2__title {
  color: var(--secondary-grey);
}

/* b-cta */


.s-header .b-cta {
  border-radius: 35px;
  font-size: 1.5em;
}

.b-cta {
  background-color: var(--main-blue);
  border:None;
}

.b-cta:hover, .b-cta:active, .b-cta:focus {
  background-color: var(--secondary-blue);
  box-shadow: 0 0 0 0.2rem  var(--secondary-grey);
  -webkit-box-sizing: border-box;
  box-sizing: border-box;

}

.b-cta--outlined {
  color: var(--main-blue);
  background-color: white;
  border: solid 1px;
  border-color: var(--main-blue);
  text-transform: none;
}

.b-cta--outlined:hover, .b-cta--outlined:active, .b-cta--outlined:focus {
  border:None;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  color:white;

}
/* b-value-proposition-item */

.b-value-proposition-item__icon {
  color : var(--main-blue)
}

/*services*/

.b-service-card{
  background-color: white;
  border:0px;
  margin-bottom: 1em;
}
.b-service-card__footer {
  border: 0px;
  background-color: white;
}

/* b-menu-general */


.b-menu-general--border{
  border-right: solid 1px;
}
.b-menu-general .nav-item:hover :not(.b-menu-general__btn ) {
  color: var(--main-grey) ;

}


.b-menu-general{
  min-height: 10%;
}

/* s-articles */

.s-articles {
  padding-top: 0em;;
}

/* b-article-preview */
.b-article-preview {
  background-color: #fff;
  border-right: solid 2px;
  border-color: #b1b1b1
}


/* contact form */
.contact-form__btn{
  border-radius: 0px;
  font-weight: 700;
  font-size: small;
}

.contact-form__btn .active {
  color: #fff;
  background-color: #88BBD6;
}
.contact-form__btn .active, .contact-form__btn .focus{
  box-shadow: 0 0 0 0.2rem rgba(205, 205, 205, 1) ;
}

@media screen and (min-width: 480px) {
  .contact-form__btn {
    font-size: medium;
  }
}

/* Contact information */

.contact-information__illustration {
  background-size:cover;
  opacity: 0.5;
}

.contact-information {
  color: #b1b1b1;
}

